--- a/src/components/MainPage/slider/slider.module.css
+++ b/src/components/MainPage/slider/slider.module.css
@@ -1,170 +1,35 @@
 .slider {
-    @apply flex justify-center items-center mb-[230px]
+  @apply mb-[230px] flex items-center justify-center laptop:w-full;
 }
 
 .information {
-    @apply relative flex flex-col items-center
+  @apply relative flex flex-col items-center;
 }
 
 .button {
-    @apply bg-gray-800 h-[55px] w-[55px] py-0 pl-[23px] rounded-xl disabled:cursor-pointer ease-in-out hover:-translate-y--25
+  @apply h-[55px] w-[55px] rounded-xl bg-gray-800 py-0 pl-[23px] ease-in-out hover:-translate-y--25 disabled:cursor-pointer laptop:h-[40px] laptop:w-[40px] laptop:pl-[15px];
 }
 
 .server {
-    @apply py-0 px-[40px] rounded-[60px]
+  @apply rounded-[80px] px-[20px] py-0 laptop:h-[450px]  lg:h-[520px];
 }
 
 .h3 {
-    @apply absolute top-[447px] text-gray-500 text-[18px] font-ProximSemiBold
+  @apply absolute top-[447px] font-ProximSemiBold text-[18px] text-gray-400 laptop:top-[310px] laptop:text-[15px] lg:top-[380px];
 }
 
 .h1 {
-    @apply absolute top-[475px] text-white text-[28px] font-ProximBold
+  @apply absolute top-[475px] font-ProximBold text-[28px] text-white laptop:top-[330px] laptop:text-[20px] lg:top-[405px];
 }
 
-
 .server_progress__online {
-    @apply h-[3px] bg-progress-online mt-[10px] w-[276px] top-[519px] rounded-[27px] overflow-hidden absolute
+  @apply absolute top-[519px] mt-[10px] h-[3px] w-[276px] overflow-hidden rounded-[27px] bg-progress-online laptop:top-[360px] laptop:w-[220px] lg:top-[445px];
 }
 
 .server_status {
-    @apply flex items-center font-ProximSemiBold top-[545px] mb-[42px] absolute before:block before:w-[8px] before:h-[8px] before:rounded-[50%] before:mr-[10px] before:bg-server-status
+  @apply absolute top-[545px] mb-[42px] flex items-center font-ProximSemiBold before:mr-[10px] before:block before:h-[8px] before:w-[8px] before:rounded-[50%] before:bg-server-status laptop:top-[380px] lg:top-[470px];
 }
-
 
 .online {
-    @apply text-[16px] text-white
-}
-
-
-
-
-
-
-@media (max-width: 1450px ) {
-
-
-    .h1 {
-        @apply top-[400px]
-    }
-
-    .server_progress__online {
-        @apply top-[475px]
-    }
-
-    .server_status {
-        @apply top-[500px]
-    }
-
-    .server {
-        @apply px-[10px]
-    }
-
-
-}
-
-@media (max-width: 1200px ) {
-
-
-    .h1 {
-        @apply top-[400px]
-    }
-
-    .server_progress__online {
-        @apply top-[475px]
-    }
-
-    .server_status {
-        @apply top-[500px]
-    }
-
-    .server {
-        @apply px-[15px]
-    }
-
-
-}
-
-@media (max-width: 768px ) {
-
-
-    .slider {
-        @apply mr-[350px]
-    }
-
-    .server {
-        @apply px-[50px] rounded-[60px] py-0
-    }
-
-
-}
-
-
-@media (max-width: 480px ) {
-
-
-    .slider {
-        @apply mr-[675px] mt-52
-    }
-
-    .server {
-        @apply px-[30px] rounded-[60px] py-0 h-[430px]
-    }
-
-    .h3 {
-        @apply absolute top-[310px] text-gray-500 text-[16px]
-    }
-
-    .h1 {
-        @apply absolute top-[330px] text-white text-[24px]
-    }
-
-
-    .server_progress__online {
-        @apply h-[3px] bg-progress-online mt-[10px] w-[176px] top-[360px] rounded-[27px] overflow-hidden absolute
-    }
-
-    .server_status {
-        @apply flex items-center top-[380px] mb-[42px] absolute before:block before:w-[8px] before:h-[8px] before:rounded-[50%] before:mr-[10px] before:bg-server-status
-    }
-
-}
-
-@media (max-width: 368px ) {
-
-
-    .slider {
-        @apply mr-[800px] mt-52
-    }
-
-    .server {
-        @apply px-[20px] rounded-[60px] py-0 h-[400px]
-    }
-
-    .button {
-        @apply bg-gray-800 h-[30px] w-[35px] py-0 pl-[13px]
-    }
-
-    .btn_strell {
-        @apply h-[16px]
-    }
-
-
-    .h3 {
-        @apply absolute top-[300px] text-gray-500 text-[16px]
-    }
-
-    .h1 {
-        @apply absolute top-[320px] text-white text-[24px]
-    }
-
-
-    .server_progress__online {
-        @apply h-[3px] bg-progress-online mt-[10px] w-[176px] top-[350px] rounded-[27px] overflow-hidden absolute
-    }
-
-    .server_status {
-        @apply flex items-center top-[370px] mb-[42px] absolute before:block before:w-[8px] before:h-[8px] before:rounded-[50%] before:mr-[10px] before:bg-server-status
-    }
-
+  @apply text-[16px] text-white laptop:text-[14px];
 }
